# clutt3r-seg-modified

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  THIRD_PARTY.md  initial_segmenter.sh  pyproject.toml  requirements.txt  update_segmenter.sh
clutt3rseg/: __init__.py  calculate_similarity.py  generate_instance_tree.py  hierarchy_based_instance_mask_grouping.py  initial_segmenter.py  run_dummy_clustering.py  run_final_clustering.py  scene_updater.py  tree_artifacts.py  update_segmenter.py  utils.py  visualize_instance_tree.py
clutt3rseg/clip_backends/: __init__.py  duoduo.py
samples/: README.md
samples/sample_seq1/data/: instance_tree.json  transforms.json
samples/sample_seq2/data/: instance_tree.json  transforms.json
samples/sample_seq3/data/: instance_tree.json  transforms.json
samples/sample_seq4/data/: instance_tree.json  transforms.json
samples/sample_seq5/data/: instance_tree.json  transforms.json
scripts/: adopt_preprocess_outputs.py  run_initial.sh  run_update.sh  setup_duoduo_clip.sh
